tests/negative/typecheck/inferred-no-val.orng
fn main() -> Int
    let x: (a: Int | b: Int) = .a
    x.a